fixed nav bar spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -45,6 +45,10 @@ body{
     align-items: center;
 }
 
+span{
+    padding: 0px 12px;
+}
+
 .content{
     background-color: #FFF;
     max-width: 50rem;
